src/test/resources/tests/batching.t2
int main(void) {
  EncInt batched_ctxt;
  EncInt[] batched_ctxt_vec;

/**
 * The commented lines below are for testing.
 **/
//  int x;
//  int[] arr;
//  x = { 1, 2 }; // error
//  arr = { 1, 2 }; // ok
//  arr[0] = { 1, 2 }; // error

  tstart();
  batched_ctxt = { 1, 3 }; // batching
  batched_ctxt_vec = { 1, 3 }; // non-batching
  batched_ctxt_vec[0] = { 1, 3 }; // batching

  batched_ctxt_vec[0] = batched_ctxt + batched_ctxt; // ok
  batched_ctxt += batched_ctxt; // ok
  tstop();

  return 0;
}
